[project]
name = "01-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "ipykernel>=7.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.10",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "wikipedia>=1.4.0",
]
